dashcard and account landing - notices page

--- a/templates/account-base.html
+++ b/templates/account-base.html
@@ -18,4 +18,10 @@
         {% block researcher_content %}{% endblock %}
     {% endif %}
 
+    {% if service_provider %}
+        {% include 'partials/infocards/_service-provider-dashcard.html' %}
+        {% include 'partials/_subnav.html' %}
+        {% block service_provider_content %}{% endblock %}
+    {% endif %}
+
 {% endblock %}
