--- a/templates/partials/infocards/_service-provider-card.html
+++ b/templates/partials/infocards/_service-provider-card.html
@@ -47,7 +47,7 @@
                     {% if '/dashboard/' in request.path %}
                         <a 
                             class="primary-btn action-btn"
-                            href=""
+                            href="{% url 'service-provider-notices' service_provider.id %}"
                         >View account</a>
                     {% endif %}
                 </div>
