--- a/templates/widget_forms/boundary_widget.html
+++ b/templates/widget_forms/boundary_widget.html
@@ -58,6 +58,13 @@
     href="{% url 'community-boundary-view' community_id %}">
     View Boundary
 </a>
+{% elif project_id %}
+<a
+    id="view-saved-boundary"
+    target="_blank"
+    href="{% url 'project-boundary-view' project_id %}">
+    View Boundary
+</a>
 {% endif %}
 <input
         type="file" id="shapefile-input" name="shapefile" style="display: none"
