--- a/templates/partials/infocards/_service-provider-dashcard.html
+++ b/templates/partials/infocards/_service-provider-dashcard.html
@@ -19,7 +19,7 @@
 
                 {% if request.user == service_provider.account_creator%}
                     <div class="margin-left-8">
-                        <a href="" class="darkteal-text primary-btn white-btn"> Settings <i class="fa fa-cog" aria-hidden="true"></i></a>
+                        <a href="{% url 'update-service-provider' service_provider.id%}" class="darkteal-text primary-btn white-btn"> Settings <i class="fa fa-cog" aria-hidden="true"></i></a>
                     </div>
                 {% endif %}
             </div>
