finished create account process

--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -145,9 +145,9 @@
 
         {% if service_provider %}
             {% if environment == "SANDBOX" %}
-                <h2 class="no-top-margin">Creating an institution account on the sandbox Hub</h2>
+                <h2 class="no-top-margin">Creating a service provider account on the sandbox Hub</h2>
                 <p class="bold">
-                    Please note the following before creating an institution account:
+                    Please note the following before creating a service provider account:
                 </p>
                 <p>
                     <strong>01 Accounts created in the sandbox Hub can be created without the agreements that are needed on the live Hub.</strong> 
@@ -168,9 +168,9 @@
                     please <a class="default-a" href="mailto:support@localcontexts.org" target="_blank" rel="noopener">contact us</a>.
                 </p>
             {% else %}
-                <h2 class="no-top-margin">Creating an Institution Account</h2>
+                <h2 class="no-top-margin">Creating a Service Provider Account</h2>
                 <p class="bold">
-                    Please note the following before creating an institution account:
+                    Please note the following before creating a service provider account:
                 </p>
                 <p>
                     <strong>01 An institution account is for a cultural or research institution, data repository, or other organization that will use Notices.</strong> 
