--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -56,6 +56,9 @@
         <p>
             If you received an invitation to join an account, go straight to your <a href="{% url 'dashboard' %}" class="default-a">Profile</a>
         </p>
+        <p>
+            Create a <a href="{% url 'prep-service-provider' %}" class="default-a">Service Provider</a> account.
+        </p>
     </div>
 </div>
 {% endblock %}
