--- a/localcontexts/static/css/modals.css
+++ b/localcontexts/static/css/modals.css
@@ -23,8 +23,9 @@
 /* X Close modal */
 .close-modal-btn {
     text-align: center;
-    margin-bottom: 0;
     cursor: pointer;
+    padding: 5px 10px;
+    margin: -5px -10px;
 }
 
 .close-modal-btn span { font-size: 36px; }
